--- a/app/assets/stylesheets/modules/_schedules.scss
+++ b/app/assets/stylesheets/modules/_schedules.scss
@@ -15,13 +15,38 @@
   text-align: right;
 }
 
-.card-deck{
-  padding: 20px;
-  .card{
-    width: 100px;
-    flex: none;
-    margin:0 10px 15px 10px;
-  }
+.scheduleIndex-inner{
+  padding: 15px;
+}
+
+.card{
+  margin-bottom: 10px;
+}
+
+.card-body{
+  display: flex;
+}
+
+.card-schedule{
+  width: 30%;
+}
+
+.card-date{
+  font-size: 25px;
+}
+
+.card-time{
+  font-size: 15px;
+}
+
+.vs{
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+.card-text{
+  width: 70%;
+  font-size: 40px;
 }
 
 
