--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "modules/user-confirmation";
 @import "modules/user-exist";
 @import "modules/schedules";
+@import "modules/stocks";
 
 
 
