--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -33,7 +33,7 @@
           スタジアム
       - if can? :edit, current_user
         %li.headerMain__child-menu
-          =link_to new_schedule_path, class:"headerMain__child-stock" do
+          =link_to stocks_path, class:"headerMain__child-stock" do
             在庫管理
 
 
