在庫追加のリンク作成

--- a/app/assets/stylesheets/modules/_stocks.scss
+++ b/app/assets/stylesheets/modules/_stocks.scss
@@ -5,3 +5,12 @@
   margin: 0 auto;
   background-color: #ffffff;
 }
+
+.stockIndex-list{
+  margin: 10px 75px 10px;
+}
+
+.stockIndex-add{
+  margin-bottom: 5px;
+  text-align: right;
+}
