新規在庫作成画面の作成

--- a/app/assets/stylesheets/modules/_stocks.scss
+++ b/app/assets/stylesheets/modules/_stocks.scss
@@ -14,3 +14,15 @@
   margin-bottom: 5px;
   text-align: right;
 }
+
+.stockNew{
+  padding-top: 155px;
+  min-width: 450px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.stock-forms{
+  width: 650px;
+  margin: 30px auto;
+}
