--- a/app/views/schedules/_form-schedule.html.haml
+++ b/app/views/schedules/_form-schedule.html.haml
@@ -1,14 +1,13 @@
-= form_with model: @schedule, url: schedules_path, class:'schedule-forms' do |f|
+= form_with model: @schedule, class:'schedule-forms' do |f|
   %table
     %thead
       %tr
         %th 試合日時
         %th 対戦相手
     %tbody
-      = f.fields_for :schedules do |i|
-        %tr
-          %td
-            = i.datetime_field :match_date, class: "form-control"
-          %td
-            = i.collection_select :opponent_id, @team, :id, :name, {prompt: '対戦相手を選んでください'}, {class:'form-control'}
+      %tr
+        %td
+          = f.datetime_field :match_date, class: "form-control"
+        %td
+          = f.collection_select :opponent_id, @team, :id, :name, {prompt: '対戦相手を選んでください'}, {class:'form-control'}
   = f.submit "作成"
