未ログイン時の挙動修正

--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -31,9 +31,10 @@
       %li.headerMain__child-menu
         =link_to "#", class:"headerMain__child-venue" do
           スタジアム
-      - if can? :edit, current_user
-        %li.headerMain__child-menu
-          =link_to stocks_path, class:"headerMain__child-stock" do
-            在庫管理
+      - if user_signed_in?
+        -if can? :edit, current_user
+          %li.headerMain__child-menu
+            =link_to stocks_path, class:"headerMain__child-stock" do
+              在庫管理
 
 
