--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -10,9 +10,21 @@
             在庫を追加する
       .StockIndex-inner
         - @stocks.each do |stock|
-          .
-          = l stock.schedule.match_date
-          = stock.schedule.team.name
-          = stock.grade
-          = stock.price
-          = stock.remain
+          %table
+            %tr
+              %th 試合日時
+              %th 対戦相手
+              %th 席種
+              %th 金額
+              %th 在庫量
+            %tr
+              %td
+                = l stock.schedule.match_date
+              %td
+                = stock.schedule.team.name
+              %td
+                = stock.grade
+              %td
+                = stock.price
+              %td
+                = stock.remain
