--- a/app/assets/stylesheets/modules/_stocks.scss
+++ b/app/assets/stylesheets/modules/_stocks.scss
@@ -31,6 +31,22 @@
   padding: 15px;
 }
 
-.stockList__child-data{
+.stockList__child-date{
   width: 20%;
+}
+
+.stockList__child-opponent{
+  width: 20%;
+}
+
+.stockList__child-grade{
+  width: 15%;
+}
+
+.stockList__child-price{
+  width: 15%;
+}
+
+.stockList__child-remain{
+  width: 15%;
 }
