--- a/app/assets/stylesheets/modules/_stocks.scss
+++ b/app/assets/stylesheets/modules/_stocks.scss
@@ -36,11 +36,11 @@
 }
 
 .stockList__child-opponent{
-  width: 20%;
+  width: 15%;
 }
 
 .stockList__child-grade{
-  width: 15%;
+  width: 10%;
 }
 
 .stockList__child-price{
@@ -48,5 +48,12 @@
 }
 
 .stockList__child-remain{
-  width: 15%;
+  width: 10%;
+}
+
+.stockList__child-links{
+  width: 20%;
+}
+.stockList__child-edit{
+  margin-right: 10px;
 }
