--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -2,12 +2,11 @@
   = render "shared/header-main"
   .stockIndex
     %h1.title
-      チケット在庫管理
+      チケット在庫一覧
     .stockIndex-list
       - if can? :edit, current_user
         .stockIndex-add
-          =link_to new_stock_path do
-            在庫を追加する
+          =link_to "在庫を追加する", new_stock_path
       .StockIndex-inner
         %table.stockList
           %tr.stockList__header
