在庫編集画面レイアウト作成

--- a/app/assets/stylesheets/modules/_stocks.scss
+++ b/app/assets/stylesheets/modules/_stocks.scss
@@ -62,3 +62,17 @@
   margin-bottom: 5px;
   text-align: right;
 }
+
+.stockEdit__data{
+  display: flex;
+  margin-bottom: 12px;
+}
+
+.stockEdit__child-data{
+  width: 200px;
+}
+
+.test{
+  font-size: 20px;
+  padding: 0 5px;
+}
