--- a/app/views/stocks/_form-edit.html.haml
+++ b/app/views/stocks/_form-edit.html.haml
@@ -1,4 +1,9 @@
 =form_with model: @stock, class: 'edit-forms' do |f|
-  = f.text_field :price
-  = f.text_field :remain
+  .form-row
+    .form-group.col-md-6
+      %label 金額
+      = f.text_field :price, class: 'form-control'
+    .form-group.col-md-6
+      %label 設定座席数
+      = f.text_field :remain, class: 'form-control'
   =f.submit "更新"
