--- a/app/views/stocks/edit.html.haml
+++ b/app/views/stocks/edit.html.haml
@@ -7,4 +7,17 @@
       - if can? :edit, current_user
         .stockEdit-return
           =link_to "在庫一覧へ戻る", stocks_path
+      .stockEdit__data
+        .stockEdit__child-data
+          %label 対戦日
+          .test
+            = l @stock.schedule.match_date
+        .stockEdit__child-data
+          %label 対戦相手
+          .test
+            = @stock.schedule.team.name
+        .stockEdit__child-data
+          %label 席種
+          .test
+            = @stock.grade
       =render "form-edit"
