yarn update,team table削除とそれに係る記述の変更

--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -18,6 +18,6 @@
                 .cardTime
                   =l schedule.match_date, format: :time
               .cardOpponent
-                = schedule.team.name
+                = schedule.opponent
               =link_to "", class:"btn btn-primary cardLink" do
                 チケット購入
