--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -17,7 +17,7 @@
               %td.stockList__child-date
                 = l stock.schedule.match_date
               %td.stockList__child-opponent
-                = stock.schedule.team.name
+                = stock.schedule.opponent
               %td.stockList__child-grade
                 = stock.grade
               %td.stockList__child-price
