--- a/app/views/schedules/_form-schedule.html.haml
+++ b/app/views/schedules/_form-schedule.html.haml
@@ -5,7 +5,7 @@
       = f.datetime_field :match_date, class: "form-control"
     .form-group.col-md-6
       %label 対戦相手
-      = f.collection_select :opponent_id, @team, :id, :name, {prompt: '対戦相手を選んでください'}, {class:'form-control'}
+      = f.select :opponent,['チームA','チームB','チームC','チームD','チームE',], {prompt: '対戦相手を選んでください'}, {class:'form-control'}
   =f.fields_for :stocks do |i|
     .form-row
       .form-group.col-md-4
