api用にadmin controller設定、管理用にmanagement controller設定、jsonでDBを表示させる

--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -34,7 +34,7 @@
       - if user_signed_in?
         -if can? :edit, current_user
           %li.headerMain__child-menu
-            =link_to admins_path, class:"headerMain__child-stock" do
+            =link_to managements_path, class:"headerMain__child-stock" do
               管理画面
 
 
