管理画面のレイアウト変更(indexはrailsで作成)

--- a/app/views/managements/index.html.haml
+++ b/app/views/managements/index.html.haml
@@ -1,2 +1,7 @@
-= javascript_pack_tag 'main'
-
+.management-wrapper
+  = render "shared/header-main"
+  #manageIndex
+    - @schedules.each do |schedule|
+      .a
+        = l schedule.match_date
+        = schedule.opponent
