vueでのheader削除 再度vueでviewの作成

--- a/app/views/managements/index.html.haml
+++ b/app/views/managements/index.html.haml
@@ -1,7 +1,2 @@
-.management-wrapper
-  = render "shared/header-main"
-  #manageIndex
-    - @schedules.each do |schedule|
-      .a
-        = l schedule.match_date
-        = schedule.opponent
+= javascript_pack_tag 'main'
+= render "shared/header-main"
