--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     %title FUNCLUB
     = csrf_meta_tags
     = csp_meta_tag
+    = javascript_pack_tag 'application','data-turbolinks-track': 'reload'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
   %body
     = yield
