step2と3を入れ替える

--- a/app/views/devise/registrations/step2.html.haml
+++ b/app/views/devise/registrations/step2.html.haml
@@ -2,6 +2,25 @@
   =render "devise/shared/header-user"
   .user-new
     %h1.title
-      %p.user-title クレジットカード登録
-    =render "devise/shared/form-newcredit"
+      %p.user-title 登録内容確認
+    .user-inputs
+      .user__child-inputs
+        %label
+          氏名
+        .user__child-input
+          = "#{session[:user]["name"]}"
+      .user__child-inputs
+        %label
+          氏名(カナ)
+        .user__child-input
+          = "#{session[:user]["name_kana"]}"
+      .user__child-inputs
+        %label
+          メールアドレス
+        .user__child-input
+          = "#{session[:user]["email"]}"
+      .user__child-inputs
+        %p.user-text
+          ※パスワードは個人情報のため表示しておりません。
+  =render "devise/shared/form-confirmation"
   =render "shared/footer-main"
