新規登録時にクレジットカード登録

--- a/app/views/devise/shared/_form-newcredit.html.haml
+++ b/app/views/devise/shared/_form-newcredit.html.haml
@@ -15,5 +15,5 @@
     #cvc.form-control.col-md-4
     %small.text-muted
       カード裏面の3桁もしくは4桁の数字を入力してください
-  %button#token.btn
+  %button.btn
     =f.submit "登録", id:'token-submit'
