--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,7 @@
     = csp_meta_tag
     = javascript_pack_tag 'application','data-turbolinks-track': 'reload'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
-    %script{src: "https://js.pay.jp/v2/pay.js", type: "text/javascript"}
+    %script{src: "https://js.pay.jp/v2/pay.js"}
+
   %body
     = yield
