--- a/app/views/shared/_menu-mypage.html.haml
+++ b/app/views/shared/_menu-mypage.html.haml
@@ -5,4 +5,4 @@
     %li.mypageMenu__child-inner.list-group-item
       保有チケット
     %li.mypageMenu__child-inner.list-group-item
-      クレジットカード登録
+      クレジットカード
