レイアウト変更

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,18 +1,24 @@
-.user__child-forms.form-group.col-md-12
-  %label
-    カード番号
-  #number.form-control.col-md-7
-  %small.text-muted
-    ハイフン(-)を除く数字のみを入力してください
-.user__child-form.form-group.col-md-12
-  %label
-    有効期限
-  #exp.form-control.col-md-4
-.user__child-form.form-group.col-md-12
-  %label
-    CVC
-  #cvc.form-control.col-md-4
-  %small.text-muted
-    カード裏面の3桁もしくは4桁の数字を入力してください
-%button.btn
-  //=submit "登録", id:'token-submit'
+.card-wrapper
+  = render 'shared/header-main'
+  .cardIndex
+    .mypageMenu
+      =render 'shared/menu-mypage'
+    .cardForm
+      .user__child-forms.form-group.col-md-12
+        %label
+          カード番号
+        #number.form-control.col-md-7
+        %small.text-muted
+          ハイフン(-)を除く数字のみを入力してください
+      .user__child-form.form-group.col-md-12
+        %label
+          有効期限
+        #exp.form-control.col-md-4
+      .user__child-form.form-group.col-md-12
+        %label
+          CVC
+        #cvc.form-control.col-md-4
+        %small.text-muted
+          カード裏面の3桁もしくは4桁の数字を入力してください
+      %button.btn
+        //=submit "登録", id:'token-submit'
