--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -4,5 +4,10 @@
     .mypageMenu
       =render 'shared/menu-mypage'
     .cardList
+      = @card_info.last4
+      = @card_info.exp_month
+      =@card_info.exp_year.to_s.slice(2,3)
       = link_to new_card_path(current_user.id) do
         クレジットカード登録
+
+
