--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -4,9 +4,14 @@
     .mypageMenu
       =render 'shared/menu-mypage'
     .cardList
-      = @card_info.last4
-      = @card_info.exp_month
-      = @card_info.exp_year.to_s.slice(2,3)
+      - @mycards.each do |mycard|
+        .cardList__number
+          ="**** **** ****" + mycard.last4
+        .cardList__exp
+          - exp_month = mycard.exp_month.to_s
+          - exp_year = mycard.exp_year.to_s.slice(2,3)
+          = exp_month + "/" + exp_year
+
       = link_to new_card_path(current_user.id) do
         クレジットカード登録
 
