--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -6,11 +6,14 @@
     .cardList
       - @mycards.each do |mycard|
         .cardList__number
-          ="**** **** ****" + mycard.last4
+          ="**** **** **** " + mycard.last4
         .cardList__exp
-          - exp_month = mycard.exp_month.to_s
+          - month = mycard.exp_month
           - exp_year = mycard.exp_year.to_s.slice(2,3)
-          = exp_month + "/" + exp_year
+          - if month < 10 then
+            = "0" + month.to_s + "/" + exp_year
+          - else
+            = month.to_s + "/" + exp_year
         .cardList__brand
           - if mycard.brand == "Visa" then
             = icon('fab', 'cc-visa', class: 'brand')
