--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -1,12 +1,47 @@
 .cardIndex{
-  padding-top: 155px;
+  padding: 155px 50px 0;
   min-width: 450px;
-  max-width: 800px;
   margin: 0 auto;
   background-color: #ffffff;
   display: flex;
 }
 
+.cardList{
+  min-width: 300px;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+.myCard{
+  margin-bottom: 30px;
+  margin-right: 15px;
+}
+
+.myCard__data{
+  width: 230px;
+  padding: 20px 10px 10px;
+  border: solid;
+  border-radius: 1rem;
+}
+
+.myCard__data--number{
+  font-size: 20px;
+  text-align: center;
+}
+
+.myCard__data--brand{
+  font-size: 40px;
+}
+
+.myCard__data--exp{
+  text-align: right;
+  font-size: 13px;
+}
+
+.myCard__links{
+  margin-top: 5px;
+  padding-left: 10px;
+}
 .cardForm{
   width: 500px;
 }
