--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -35,7 +35,7 @@
           .myCard__links
             = link_to "#" do
               編集
-            = link_to "#" do
+            = link_to card_path, method: :delete do
               削除
 
   = link_to new_card_path(current_user.id) do
