cssの修正とclass名の再設定

--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -1,10 +1,11 @@
 .card-wrapper
   = render 'shared/header-main'
-  .cardIndex
+  .myPage
     .mypageMenu
       =render 'shared/menu-mypage'
-    .cardList
-      =render 'cardList'
+    .cardIndex
+      .cardList
+        =render 'cardList'
   = link_to new_card_path(current_user.id) do
     クレジットカード追加
 
