--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -1,14 +1,9 @@
 .cardIndex{
-  padding: 155px 50px 0;
-  min-width: 450px;
+  max-width: 1000px;
   margin: 0 auto;
-  background-color: #ffffff;
-  display: flex;
 }
 
 .cardList{
-  min-width: 300px;
-  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
 }
