--- a/app/assets/stylesheets/modules/_mypage.scss
+++ b/app/assets/stylesheets/modules/_mypage.scss
@@ -1,12 +1,17 @@
-.mypageIndex{
-  padding-top: 155px;
-  min-width: 450px;
-  max-width: 800px;
+.myPage{
+  padding: 155px 50px 0;
   margin: 0 auto;
   background-color: #ffffff;
+  display: flex;
 }
 
 .mypageMenu{
   width: 200px;
   margin-right: 50px;
+}
+
+.mypageIndex{
+  min-width: 300px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
