クレジットカード登録ページのcss修正

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,7 +1,6 @@
 .card-wrapper
   = render 'shared/header-main'
-
-  .cardIndex
+  .myPage
     .mypageMenu
       =render 'shared/menu-mypage'
     .cardForm
