--- a/app/assets/stylesheets/modules/_mypage.scss
+++ b/app/assets/stylesheets/modules/_mypage.scss
@@ -3,11 +3,11 @@
   margin: 0 auto;
   background-color: #ffffff;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mypageMenu{
   width: 200px;
-  margin-right: 50px;
 }
 
 .mypageIndex{
