--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,10 +1,10 @@
 .card-wrapper
   = render 'shared/header-main'
   .myPage
-    .mypageMenu
-      =render 'shared/menu-mypage'
-    .cardForm
-      =form_with model: @card, id: 'credit-form' do |f|
-        =render  'devise/shared/form-newcredit'
-        %button.btn
-          =f.submit  "登録", id:'token-submit'
+    =render 'shared/menu-mypage'
+    .mypageCredit
+      .cardForm
+        =form_with model: @card, id: 'credit-form' do |f|
+          =render  'devise/shared/form-newcredit'
+          %button.btn
+            =f.submit  "登録", id:'token-submit'
