--- a/app/assets/stylesheets/modules/_cards.scss
+++ b/app/assets/stylesheets/modules/_cards.scss
@@ -1,16 +1,20 @@
 .cardIndex{
-  min-width: 300px;
+  min-width: 500px;
   max-width: 850px;
   flex: auto;
+
 }
 
 .cardList{
   display: flex;
   flex-wrap: wrap;
+  margin: 0 50px 0;
+  padding: 15px;
+
 }
+
 .myCard{
-  margin-bottom: 30px;
-  margin-right: 15px;
+  margin: 0 30px 20px 0;
 }
 
 .myCard__data{
@@ -31,12 +35,20 @@
 
 .myCard__data--exp{
   text-align: right;
-  font-size: 13px;
+  font-size: small;
 }
 
 .myCard__links{
   margin-top: 5px;
   padding-left: 10px;
+}
+
+.myCard__links--edit{
+  margin-right: 10px;
+}
+
+.addCredit{
+  float: right;
 }
 
 .cardForm{
