--- a/app/views/cards/_cardList.html.haml
+++ b/app/views/cards/_cardList.html.haml
@@ -30,7 +30,8 @@
       %button.btn.myCard__links
         = link_to "#", class: "btn btn-secondary myCard__links--edit"  do
           編集
-        = link_to card_path, method: :delete, class: "btn btn-danger" do
-          削除
+        - if @count > 1 then
+          = link_to card_path, method: :delete, class: "btn btn-danger" do
+            削除
 - else
   %span クレジットカードを登録してください
