--- a/app/views/cards/_cardList.html.haml
+++ b/app/views/cards/_cardList.html.haml
@@ -28,8 +28,11 @@
           - else
             = month.to_s + "/" + exp_year
       %button.btn.myCard__links
-        = link_to "#", class: "btn btn-secondary myCard__links--edit"  do
-          編集
+        - if @default_card == mycard.id
+          %span 支払い設定中
+        - else
+          = link_to "#", class: "btn btn-dark myCard__links--change" do
+            使用カード変更
         - if @count > 1 then
           = link_to card_path, method: :delete, class: "btn btn-danger" do
             削除
