カードの有無で挙動を変える。

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -3,6 +3,7 @@
   .myPage
     =render 'shared/menu-mypage'
     .mypageCredit
+      %h2.title クレジットカード新規登録
       .cardForm
         =form_with model: @card, id: 'credit-form' do |f|
           =render  'devise/shared/form-newcredit'
