--- a/app/views/cards/_cardList.html.haml
+++ b/app/views/cards/_cardList.html.haml
@@ -1,40 +1,34 @@
-- if @mycards.present?
-  - @mycards.each do |mycard|
-    .myCard
-      .myCard__data
-        .myCard__data--number
-          ="**** **** **** " + mycard.last4
-        .myCard__data--brand
-          - if mycard.brand == "Visa" then
-            = icon('fab', 'cc-visa', class: 'brand')
-          - elsif mycard.brand == "MasterCard" then
-            = icon('fab', 'cc-mastercard', class: 'brand')
-          - elsif mycard.brand == "JCB" then
-            = icon('fab', 'cc-jcb', class: 'brand')
-          - elsif mycard.brand == "American Express" then
-            = icon('fab', 'cc-amex',class: 'brand')
-          - elsif mycard.brand == "Diners Club" then
-            = icon('fab', 'cc-diners-club',class: 'brand')
-          - elsif mycard.brand == "Discover" then
-            = icon('fab', 'cc-discover',class: 'brand')
-          - else
-            = icon('fal', 'credit-card',class: 'brand')
-        .myCard__data--exp
-          %label 有効期限(MM/YY)
-          - month = mycard.exp_month
-          - exp_year = mycard.exp_year.to_s.slice(2,3)
-          - if month < 10 then
-            = "0" + month.to_s + "/" + exp_year
-          - else
-            = month.to_s + "/" + exp_year
-      %button.btn.myCard__links
-        - if @default_card == mycard.id
-          %span 使用中
-        - else
-          = link_to "#", class: "btn btn-dark myCard__links--change" do
-            支払い変更
-        - if @count > 1 then
-          = link_to card_path, method: :delete, class: "btn btn-danger" do
-            削除
-- else
-  %span クレジットカードを登録してください
+.myCard
+  .myCard__data
+    .myCard__data--number
+      ="**** **** **** " + @card_data.last4
+    .myCard__data--brand
+      - if @card_data.brand == "Visa" then
+        = icon('fab', 'cc-visa', class: 'brand')
+      - elsif @card_data.brand == "MasterCard" then
+        = icon('fab', 'cc-mastercard', class: 'brand')
+      - elsif @card_data.brand == "JCB" then
+        = icon('fab', 'cc-jcb', class: 'brand')
+      - elsif @card_data.brand == "American Express" then
+        = icon('fab', 'cc-amex',class: 'brand')
+      - elsif @card_data.brand == "Diners Club" then
+        = icon('fab', 'cc-diners-club',class: 'brand')
+      - elsif @card_data.brand == "Discover" then
+        = icon('fab', 'cc-discover',class: 'brand')
+      - else
+        = icon('fal', 'credit-card',class: 'brand')
+    .myCard__data--exp
+      %label 有効期限(MM/YY)
+      - month = @card_data.exp_month
+      - exp_year = @card_data.exp_year.to_s.slice(2,3)
+      - if month < 10 then
+        = "0" + month.to_s + "/" + exp_year
+      - else
+        = month.to_s + "/" + exp_year
+  %button.btn.myCard__links
+    - if @default_card == @card_data.id
+      %span 使用中
+      = link_to edit_card_path(@card), class: "btn btn-secondary myCard__links--edit" do
+        編集
+      = link_to card_path, method: :delete, class: "btn btn-danger" do
+        削除
