--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -2,8 +2,8 @@
   = render 'shared/header-main'
   .myPage
     =render 'shared/menu-mypage'
-    .cardIndex
+    .creditIndex
       %h2.title 登録済みクレジットカード
-      .cardList
-        =render 'cardList'
+      .creditData
+        =render 'creditData'
 
