--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -2,7 +2,7 @@
   = render 'shared/header-main'
   .myPage
     =render 'shared/menu-mypage'
-    .mypageCredit
+    .newCredit
       %h2.title クレジットカード新規登録
       .cardForm
         =form_with model: @card, id: 'credit-form' do |f|
