--- a/app/views/funclubs/index.html.haml
+++ b/app/views/funclubs/index.html.haml
@@ -1,5 +1,6 @@
 .funClub-wrapper
   = render "shared/header-main"
+  = render "shared/navbar"
   .funClub
     %section.funClub__schedules
       %h1.title
