--- a/app/views/shared/_match-index.html.haml
+++ b/app/views/shared/_match-index.html.haml
@@ -1,7 +1,7 @@
 .match__componets
   .match__child-componet
     %p.match__child-opponent
-      =icon('fab', 'fort-awesome')
+      %i.fas.fa-camera
   .match__child-componet
     %p.match__child-date
       2020/01/01
