--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,11 @@
-@import "bootstrap";
-@import "font-awesome-sprockets";
-@import "font-awesome";
+$fa-font-path:'@fortawesome/fontawesome-free/webfonts';
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
+@import '@fortawesome/fontawesome-free/scss/regular';
+@import '@fortawesome/fontawesome-free/scss/solid';
+@import '@fortawesome/fontawesome-free/scss/brands';
+
+@import 'bootstrap/scss/bootstrap';
+
 @import "config/sanitize";
 @import "modules/funclub";
 @import "modules/match";
@@ -15,11 +20,7 @@
 @import "modules/managements";
 @import "modules/mypage";
 @import "modules/cards";
-
-
-
-
-
+@import "modules/navbar";
 
 
 a, a:hover {
