マイページの背景設定　css修正

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,7 @@
-.mypage-wrapper
+.myPage-wrapper
   = render "shared/header-main"
+  = render "shared/navbar"
   .myPage
     = render "shared/menu-mypage"
     .mypageIndex
+  =render "shared/footer-main"
