--- a/app/assets/stylesheets/modules/_mypage.scss
+++ b/app/assets/stylesheets/modules/_mypage.scss
@@ -1,6 +1,9 @@
+.myPage-wrapper{
+  background-color: #eeeeee;
+}
+
 .myPage{
-  padding-top: 155px;
-  max-width: 1080px;
+  max-width: 980px;
   margin: 0 auto;
   background-color: #ffffff;
   display: flex;
