--- a/app/views/shared/_header-main.html.haml
+++ b/app/views/shared/_header-main.html.haml
@@ -8,7 +8,7 @@
         =link_to user_path(current_user.id), class:"headerMain_item-mypage" do
           マイページ
       - else
-        =link_to users_sign_in_menu_path, class:"headerMain_item-login" do
+        =link_to new_user_session_path, class:"headerMain_item-login" do
           ログイン
 
 
